--- a/phpdocker/README.html
+++ b/phpdocker/README.html
@@ -40,7 +40,7 @@
 
 <h2>Services exposed outside your environment</h2>
 
-<p>You can access your application via <strong><code>localhost</code></strong>, if you're running the containers directly, or through <strong>``</strong> when run on a vm. nginx and mailhog both respond to any hostname, in case you want to add your own hostname on your <code>/etc/hosts</code></p>
+<p>You can access your application via <strong><code>localhost</code></strong>. Mailhog and nginx both respond to any hostname, in case you want to add your own hostname on your <code>/etc/hosts</code></p>
 
 <table>
 <thead>
@@ -110,7 +110,7 @@
 
 <h1>Application file permissions</h1>
 
-<p>As in all server environments, your application needs the correct file permissions to work proberly. You can change the files throught the container, so you won't care if the user exists or has the same ID on your host.</p>
+<p>As in all server environments, your application needs the correct file permissions to work properly. You can change the files throughout the container, so you won't care if the user exists or has the same ID on your host.</p>
 
 <p><code>docker-compose exec php-fpm chown -R www-data:www-data /application/public</code></p>
 
